--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@expo/ngrok": "^4.1.3",
     "@expo/prebuild-config": "^9.0.6",
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "^8.3.0",
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.14",
@@ -43,12 +44,14 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-css-interop": "^0.1.22",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-maps": "^1.20.1",
     "react-native-reanimated": "~3.17.5",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.10.0",
+    "react-native-svg": "^15.12.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "^13.13.5",
